Kubernetes-Manifests-file/base/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todolist-frontend-deployment
  labels:
    app: todolist
    component: frontend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: todolist
      component: frontend

  template:
    metadata:
      labels:
        app: todolist
        component: frontend

    spec:
      containers:
        - name: todolist-frontend
          image: houssemdhahri93/todolist-frontend
          imagePullPolicy: Always

          ports:
            - containerPort: 3000

          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 180
            periodSeconds: 60
            timeoutSeconds: 10
            failureThreshold: 10

          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 150
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 10

          resources:
            requests:
              cpu: "100m"
              memory: "384Mi"
            limits:
              cpu: "1000m"
              memory: "512Mi"
