Kubernetes-Manifests-file/base/frontend/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: todolist-frontend-service
  labels:
    app: todolist
    component: frontend

spec:
  selector:
    app: todolist
    component: frontend

  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
      
  type: ClusterIP
