Kubernetes-Manifests-file/base/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /mongo-express
            pathType: Prefix
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 8081
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: todolist-backend
                port:
                  number: 3500
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todolist-frontend
                port:
                  number: 3000
